[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "spectral-kernels"
version = "0.1.0"
requires-python = ">=3.9"
description = "Rust kernel for binning mass-spectrometer intensity/mass columns into peak areas"

[tool.maturin]
module-name = "spectral_kernels"
